--- a/login.html
+++ b/login.html
@@ -23,8 +23,8 @@
                             <div class="row">
                                 <div class="input-field col s12">
                                     <i class="material-icons prefix">account_circle</i>
-                                    <input id="last_name" type="text" class="validate">
-                                    <label for="last_name">Usuário</label>
+                                    <input id="user" type="text" class="validate">
+                                    <label for="user">Usuário</label>
                                 </div>
                                 <div class="input-field col s12">
                                     <i class="material-icons prefix">lock</i>
